@@ -10,7 +10,8 @@ c - crash     b - bug fix    e - enhancement    f - new feature
   f - changes to allow TORQUE to operate without pbs_iff (merged from 2.3)
   e - made logging functions rentrant safe by using localtime_r instead of
       localtime() (merged from 2.3)
-
+  e - Merged in more logging and NOSIGCHLDMOM capability from Yahoo branch
+  
 2.4.0
   f - added a "-q" option to pbs_mom which does *not* perform the default -p 
       behavior
